[package]
name = "advent-of-code-2021"
license = "MIT"
readme = "README.md"
version = "0.1.0"
authors = ["Andreas Runfalk <andreas@runfalk.se>"]
edition = "2021"
publish = false

# Always optimize builds (we care about speed, not safety)
[profile.dev]
opt-level = 3

[dependencies]
anyhow = "1"
nom = "7"
once_cell = "1"
regex = "1"
clap = { version = "3", features = ["derive"] }
thiserror = "1"
